Fix #150 Edge of blog button cropped

--- a/_sass/includes/_blog_nav.scss
+++ b/_sass/includes/_blog_nav.scss
@@ -29,7 +29,7 @@
 
     .button {
         margin: 0em;
-        display: inline;
+        display: inline-block;
 
         .fa {
             &.fa-chevron-right, &.fa-chevron-left {
